--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-numpy
-pandas
-scikit-learn
-xgboost
-lightgbm
-matplotlib
-seaborn
-nltk
-re
-tqdm
-joblib
+numpy>=1.26
+pandas>=2.2
+scikit-learn>=1.4
+matplotlib>=3.8
+seaborn>=0.13
+tqdm>=4.66
+joblib>=1.3
+lightgbm>=4.0
+xgboost>=2.0
+datasets>=3.0
+kaggle>=1.6
+text-unidecode>=1.3
+regex>=2024.4.16
