--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
+*.csv filter=lfs diff=lfs merge=lfs -text
+*.json filter=lfs diff=lfs merge=lfs -text
 data/combined_dataset.csv filter=lfs diff=lfs merge=lfs -text
 data/News_Category_Dataset_v3.json filter=lfs diff=lfs merge=lfs -text
