--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.json filter=lfs diff=lfs merge=lfs -text
 data/combined_dataset.csv filter=lfs diff=lfs merge=lfs -text
 data/News_Category_Dataset_v3.json filter=lfs diff=lfs merge=lfs -text
+*.joblib filter=lfs diff=lfs merge=lfs -text
